[package]
name = "banking_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
hex = "0.4.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
rand = "0.9"
rand_core = "0.9"
rand_chacha = "0.9"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
sha2 = "0.10.8"
tokio = "1.43.0"
uuid = "1.12.1"
actix-cors = "0.7.0"
chrono = "0.4.39"

[profile.dev]
incremental = true
debug = 1
codegen-units = 256

[profile.release]
codegen-units = 1
